Fixed some bug in js

--- a/4inarow/index.html
+++ b/4inarow/index.html
@@ -15,6 +15,7 @@
 <!-- partial:index.partial.html -->
 <h1>Test our model</h1>
 <p class="info">Play vs AI</p>
+<p id="message">Loading ...</p>
 <div id="game-base">
   <div id="game-table">
 
