--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 ---
 layout: home
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: D-MODEL
+subtitle: We share with you our Deep Learning projects
 ---
+
+
+
+<h1>Description</h1>
+
+<p> Work in progress </p>
