--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 ---
 layout: home
 title: D-MODEL
-subtitle: We share with you our Deep Learning projects
+subtitle: A blog on deep learning. From scratch.
 ---
+<p>You find <a href="/projects">here</a> a list of our projects on deep learning.
+</p>
+<hr>
 
-
-
-<h1>Description</h1>
-
-<p> Work in progress </p>
+<h1 style="color:#2c1572">RECENT POSTS</h1>
