--- a/projects/4inarow/4inarow.html
+++ b/projects/4inarow/4inarow.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<h1>Test our model</h1>
+<h1>Test our model!</h1>
 <p class="info">Play vs AI</p>
 <p id="message">Loading ...</p>
 <div id="game-base">
